<resources>
    <string name="app_name">微信清理</string>
    <string name="wechat_video">微信小视频</string>
    <string name="wechat_img">聊天图片</string>
    <string name="wechat_voice">语音消息</string>
    <string name="wechat_files">文件</string>
    <string name="wechat_emoji">微信表情包</string>
    <string name="wechat_junk">微信垃圾</string>
    <string name="wechat_cache">微信缓存</string>
    <string name="str_wechat_clean">微信专清</string>
    <string name="str_wechat_junk">垃圾缓存（放心清理）</string>
    <string name="str_wechat_save_img">图片</string>
    <string name="str_wechat_video">微信小视频</string>
    <string name="str_wechat_voice">聊天语音</string>
    <string name="str_wechat_junks">垃圾文件</string>
    <string name="str_wechat_file">文件</string>
    <string name="str_wechat_emoji">微信表情包</string>
    <string name="str_wechat_cache">收藏夹缓存文件</string>
    <string name="str_no_data">未发现</string>
    <string name="str_wechat_remider_img">微信中保存的图片，清理后将从本地相册删除</string>
    <string name="str_wechat_remider_video">微信中存储的视频，清理后无法再次查看</string>
    <string name="str_wechat_remider_voice">聊天语音不支持播放，清理后无法再次播放</string>
    <string name="str_wechat_remider_file">微信中下载及接收的文件，清理后无法再次查看</string>
    <string name="str_wechat_remider_emoji">微信中浏览及收藏的表情，联网可重新加载</string>
    <string name="str_choose_all">全选</string>
    <string name="str_in_7_day">7天内</string>
    <string name="str_in_month">一个月内</string>
    <string name="str_more_early">更早</string>
    <string name="str_see_emoji">浏览的表情</string>
    <string name="str_down_emoji">下载的表情</string>
    <string name="str_chat_video">聊天视频</string>
    <string name="str_save_video">拍摄及保存的视频</string>
    <string name="str_small_img">缩略图</string>
    <string name="str_big_img">大图</string>
    <string name="str_wechat_files">文件</string>
    <string name="str_voice_files">语音消息</string>
    <string name="str_wechat_clean_main">微信专清</string>
    <string name="str_wechat_clean_title">微信专清</string>
    <string name="str_wechat_junk_tips">日志、图片等垃圾文件，不影响微信使用</string>
    <string name="str_junk_cache_delete">垃圾缓存（放心清理）</string>
    <string name="byte_short">B</string>
    <string name="kilo_byte_short">KB</string>
    <string name="mega_byte_short">MB</string>
    <string name="giga_byte_short">GB</string>
    <string name="tera_byte_short">TB</string>
    <string name="peta_byte_short">PB</string>
    <string name="clean_file_size_suffix">%1$s%2$s</string>
    <string name="delete_selected_files">删除所选文件</string>
    <string name="sure_to_clean_files">确认删除所选文件吗？</string>
    <string name="delete">删除</string>
    <string name="file_size">大小:</string>
    <string name="file_date">日期:</string>
    <string name="file_path">路径:</string>
    <string name="view">查看</string>
    <string name="cancel">取消</string>
    <string name="do_junk_clean">清理</string>
    <string name="str_wechat_selected">已选</string>
    <string name="group_children_num" translatable="false">(%d)</string>
    <string name="title_activity_junk_clean">垃圾清理</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="accessibility_permission_guide">&lt;font color=#666666&gt;开启相应权限，点击“手机加速”则进入“强力加速”模式，一键阻断应用偷偷自启动运行，避免&lt;/font&gt;&lt;font color=#5FD57B&gt;占内存、耗电、耗流量&lt;/font&gt;</string>
    <string name="account_age">年龄</string>
    <string name="account_email">邮箱</string>
    <string name="account_place">位置</string>
    <string name="account_save">保存</string>
    <string name="account_sex">性别</string>
    <string name="all_file">所有文件</string>
    <string name="app_detil">应用详情</string>
    <string name="app_download_fail">下载失败，请检查网络是否正常</string>
    <string name="app_market">应用市场</string>
    <string name="app_recommend_download_count">%s次下载</string>
    <string name="app_to_down1">立即体验</string>
    <string name="app_to_down2">查看详情</string>
    <string name="app_to_down3">立即查看</string>
    <string name="app_uninstall">软件管理</string>
    <string name="app_uninstall2">软件卸载</string>
    <string name="app_uninstall_bottom_storage">本机存储：已用%s，剩余%s</string>
    <string name="app_uninstall_clean">清除数据</string>
    <string name="big_app_clean">应用卸载</string>
    <string name="big_color_text_music">音乐</string>
    <string name="big_color_text_package">安装包</string>
    <string name="big_color_text_video">视频</string>
    <string name="big_music_clean">音乐管理</string>
    <string name="big_photo_clean">相册管理</string>
    <string name="big_unused_package_clean">安装包管理</string>
    <string name="big_unused_package_clean_content">清理手机中的安装包</string>
    <string name="big_video_clean">视频管理</string>
    <string name="big_video_clean_content">管理不再观看的视频</string>
    <string name="button_feedback">反馈</string>
    <string name="change_headimg">修改头像</string>
    <string name="channel_id">10009548</string>
    <string name="check_garbage_detail">查看垃圾详情 &gt;</string>
    <string name="choose">选择</string>
    <string name="choose_needs_clean">请选择需要清理的</string>
    <string name="choose_needs_send_to_photo">请选择需要导出的</string>
    <string name="choose_needs_uninstall">请选择需要卸载的软件</string>
    <string name="city">市</string>
    <string name="clean_1905_movie">1905电影网</string>
    <string name="clean_account_topbar_title">我的</string>
    <string name="clean_acfun">AcFun</string>
    <string name="clean_ad_name">的广告</string>
    <string name="clean_ad_tip">广告</string>
    <string name="clean_alert_dialog_confirm">确定</string>
    <string name="clean_all_file_sure">确认</string>
    <string name="clean_allvideo_title">视频管理</string>
    <string name="clean_apk_file_damage">[已经损坏]</string>
    <string name="clean_apk_file_install">[已经安装]</string>
    <string name="clean_apk_file_uninstall">[未安装]</string>
    <string name="clean_apk_manager">安装包清理</string>
    <string name="clean_app_cache_in_system">应用缓存</string>
    <string name="clean_app_manager">软件管理</string>
    <string name="clean_app_not_installed">免流量安装</string>
    <string name="clean_app_not_installed_all">全部</string>
    <string name="clean_app_size">应用大小:</string>
    <string name="clean_applist_empty">暂时没有推荐的应用哦</string>
    <string name="clean_baidu">百度视频</string>
    <string name="clean_baidu_speed">百度极速版</string>
    <string name="clean_baofeng">暴风影音</string>
    <string name="clean_baomihua_shortvideo">爆米花视频</string>
    <string name="clean_big_has_cleaned">暂未发现垃圾</string>
    <string name="clean_big_pkg_pkg_installed">已安装</string>
    <string name="clean_big_pkg_pkg_uninstalled">未安装</string>
    <string name="clean_bigfiles_manager">大文件管理</string>
    <string name="clean_bilibili">哔哩哔哩</string>
    <string name="clean_bilibili_gainian_video">哔哩哔哩概念</string>
    <string name="clean_bobo">波波视频</string>
    <string name="clean_bobo_shortvideo">播播短视频</string>
    <string name="clean_boke_shortvideo">擂客小视频</string>
    <string name="clean_btn_clean_name">清理加速</string>
    <string name="clean_cache_pic">缓存图片</string>
    <string name="clean_can_clean">可清理</string>
    <string name="clean_can_clean_easy">可清理</string>
    <string name="clean_can_clean_garbage">建议清理</string>
    <string name="clean_can_clean_notify_number">可清理通知</string>
    <string name="clean_chat">聊天</string>
    <string name="clean_chat_pic">聊天图片</string>
    <string name="clean_chat_receive_or_shop_download">浏览聊天记录产生的表情</string>
    <string name="clean_chigua_shortvideo">吃瓜小视频</string>
    <string name="clean_clean_by_user">手动清理</string>
    <string name="clean_clean_notify_keep_quite">清理垃圾通知，远离频繁打扰</string>
    <string name="clean_cloud_tv">云图高清手机电视</string>
    <string name="clean_coid">8</string>
    <string name="clean_collect_face">表情</string>
    <string name="clean_comefrom_kuaishou_douyin_etc_can_clean">来自快手、抖音...可释放</string>
    <string name="clean_commit_advise">提交反馈</string>
    <string name="clean_common_video">公共视频</string>
    <string name="clean_contain_folders">包含%d个垃圾文件</string>
    <string name="clean_db_encrypt_key0">U967N66A5C9</string>
    <string name="clean_db_encrypt_key1">3397JA4Y956=</string>
    <string name="clean_db_encrypt_key11">392302320A</string>
    <string name="clean_db_encrypt_key12">fD76Ec5C01A</string>
    <string name="clean_db_encrypt_key13">yn663FO42O0</string>
    <string name="clean_db_encrypt_key14">G742y28520U</string>
    <string name="clean_db_encrypt_key15">873RbPE42Pi</string>
    <string name="clean_db_encrypt_key2">T3B41kG840L</string>
    <string name="clean_db_encrypt_key3">0153Cgu09OB</string>
    <string name="clean_db_encrypt_key4">f948Eb708FA</string>
    <string name="clean_db_encrypt_key5">69FeD6F98j</string>
    <string name="clean_db_encrypt_key6">uR568V8fC==</string>
    <string name="clean_db_encrypt_key7">wT702B2cV6Y</string>
    <string name="clean_db_encrypt_key8">7N4Ay958C69</string>
    <string name="clean_db_encrypt_key9">225e8C70688</string>
    <string name="clean_deep_clean">深度清理</string>
    <string name="clean_delete">删除</string>
    <string name="clean_delete_notify">删除通知</string>
    <string name="clean_develop">快速管理最近30天的文件</string>
    <string name="clean_dialog_cancel">取消</string>
    <string name="clean_dialog_clean">清理</string>
    <string name="clean_djduo_shortvideo">DJ多多</string>
    <string name="clean_doc">文档</string>
    <string name="clean_done_go_app">去逛逛</string>
    <string name="clean_done_online_video_head_tip">热门短视频</string>
    <string name="clean_done_you_like_app">你可能感兴趣的应用</string>
    <string name="clean_done_you_like_gridview_app">应用推荐</string>
    <string name="clean_dongci_shortvideo">动次</string>
    <string name="clean_douke_shortvideo">逗客</string>
    <string name="clean_tiktok">TikTok</string>
    <string name="clean_douyin">抖音</string>
    <string name="clean_down_findapp_title">发现更多</string>
    <string name="clean_downdone_hotapp_title">热门应用</string>
    <string name="clean_download_content">目前正在使用流量 确定下载%s吗？</string>
    <string name="clean_download_prompt">下载提示</string>
    <string name="clean_download_url_empty">文件下载地址不存在！</string>
    <string name="clean_download_video_txt">下载</string>
    <string name="clean_downloading_hotapp_title">猜你喜欢</string>
    <string name="clean_dragon_video">瓜瓜龙动画屋</string>
    <string name="clean_duoshan_shortvideo">多闪</string>
    <string name="clean_duration_long_to_short">时长由长到短</string>
    <string name="clean_duration_short_to_long">时长由短到长</string>
    <string name="clean_easy_to_clean">放心清理</string>
    <string name="clean_email_notaddress">请输入正确的邮箱地址</string>
    <string name="clean_empty">请选择要清理的垃圾项</string>
    <string name="clean_entry_detail_jieshao">应用介绍</string>
    <string name="clean_entry_detail_score">分</string>
    <string name="clean_entry_detail_version">官方版</string>
    <string name="clean_erge_shortvideo">儿歌点点</string>
    <string name="clean_exit_toast">再按一次退出程序</string>
    <string name="clean_export">导出</string>
    <string name="clean_face">表情</string>
    <string name="clean_face_cache">缓存表情</string>
    <string name="clean_feedback_edit_hint">你有什么想要的资源、功能...产品汪会设法满足你哟~</string>
    <string name="clean_feedback_msg_hint">您的联系方式: 邮箱/QQ/手机号(必填)</string>
    <string name="clean_feedback_title">意见反馈</string>
    <string name="clean_file">文件</string>
    <string name="clean_file_delete_confirm">选中的文件，删除后不可恢复!</string>
    <string name="clean_file_delete_toast_content1">1.找到并选择＂外置存储卡＂</string>
    <string name="clean_file_delete_toast_content2">2.点击</string>
    <string name="clean_file_delete_toast_content3">选择＂外置存储卡＂</string>
    <string name="clean_file_delete_toast_title">开启步骤</string>
    <string name="clean_file_isdelete">文件已删除</string>
    <string name="clean_finish_button">完成</string>
    <string name="clean_finish_clean">立即清理</string>
    <string name="clean_finish_done1">扫描完成</string>
    <string name="clean_finish_download">下载</string>
    <string name="clean_finish_install">安装</string>
    <string name="clean_finish_no_garb">手机已经很干净了!</string>
    <string name="clean_finish_no_garb_notify">通知栏很干净!</string>
</resources>