<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linWrapper"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:id="@+id/linWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/do_junk_clean"
            style="@style/common_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/do_junk_clean" />

        <CheckBox
            android:id="@+id/cbChooseAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="6dp"
            android:button="@null"
            android:enabled="true"
            android:textColor="#909090"
            android:drawableTop="@drawable/cb_check_bg"
            android:text="@string/str_choose_all" />
    </LinearLayout>

</RelativeLayout>