<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_large_file_info"
    android:padding="16dp">
    <TextView
        android:id="@+id/tvFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:singleLine="true"
        android:ellipsize="middle"
        android:textSize="18sp"/>
    <LinearLayout
        android:id="@+id/sizeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFileName"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/file_size"/>
        <TextView
            android:id="@+id/tvSizeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:textSize="16sp"
            android:textColor="@color/large_file_info"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sizeContainer"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/file_date"/>
        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:textSize="16sp"
            android:textColor="@color/large_file_info"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pathContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateContainer"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/file_path"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="48dp">
            <TextView
                android:id="@+id/tvPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:textSize="16sp"
                android:textColor="@color/large_file_info"/>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:text="@string/cancel"/>
        <TextView
            android:id="@+id/tvView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:text="@string/view"/>
    </LinearLayout>
</RelativeLayout>