<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_chat_delete" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/junk_name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/str_junk_cache_delete"
                    android:textColor="#717171"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_drop_down" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tvItemSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="4dp"
                    android:text=""
                    android:textColor="#717171"
                    android:textSize="14sp"
                    android:visibility="visible" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkBoxTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:button="@drawable/cb_check_bg"
                    android:gravity="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/delete_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/str_wechat_junk_tips"
                android:textColor="#11cc72"
                android:textSize="11sp" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flJunk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f3f3f3"
        android:padding="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/junk_icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_chat_junk" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/junk_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/str_wechat_junks"
                    android:textColor="#909090"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/junk_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="12MB"
                    android:textColor="#909090"
                    android:textSize="14sp" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:button="@drawable/cb_check_bg"
                android:gravity="center" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flCache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f3f3f3"
        android:padding="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/cache_icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_chat_cache" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cache_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/str_wechat_cache"
                    android:textColor="#909090"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/cache_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="12MB"
                    android:textColor="#909090"
                    android:textSize="14sp" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cacheCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:button="@drawable/cb_check_bg"
                android:gravity="center" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
